# knot-protocol

./: .gitignore  Cargo.toml  README.md
docs/: CAPS.md  COMPLIANCE.md  DX.md  GLOSSARY.md  RATIONALE.md  ROADMAP.md  SECURITY.md  SPEC.md  STATE.md  WIRE.md
examples/: 01_minimal_host.rs  02_minimal_rope.rs  03_capabilities.rs  04_commands_ack.rs  05_streaming_frames.rs  06_reconnect.rs  07_policy_rejection.rs  08_smart_home.rs  09_interactive_admission_2fa.rs
examples/smart_home/: README.md  smart_home.rs
src/: lib.rs  mock.rs  stream.rs
tests/: conformance.rs
