[package]
name = "knot-protocol"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1"
anyhow = "1.0"
bincode = "1.3"
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version = "1.52.1", features = ["full"] }
futures-util = "0.3"
redb = "2.1"
async-trait = "0.1"
blake3 = "1.5"

[dev-dependencies]
iroh-knot = { path = "../iroh-knot" }
